--- a/apollo/templates/my_books.html
+++ b/apollo/templates/my_books.html
@@ -3,33 +3,51 @@
 {% block content %}
 <div class="container">
 	<div class="row">
-		<div class="col-md-9"> 
-			<div class="page-header"><h3>当前借阅的图书</h3></div>
-		    <div class="row">
-		      {% for a in borrow_book_list %}
-		      <div class="col-xs-6 col-md-4 col-lg-4">
+		<div class="col-md-9">
+
+			<div class="page-header">
+				<h3>当前借阅的图书
+					{% if current_borrow_book %}
+					<sub><small>归还倒计时：<span class="text-danger" style="font-size: 1.8em;"><em>8</em></span> 天</small></sub>
+	    			{% endif %}
+
+				</h3>
+			</div>
+			{% if current_borrow_book %}
+		    <div class="row" style="padding-left: 15px;">
 		      	<table>
 		      		<tr>
 			      		<td width="110px;">
-					        <a href="/books/{{a.id}}" class="thumbnail">
-					          <img data-src="holder.js/100%x180" alt="100%x180" style="height: 158px; width: 108px; display: block;" src="{{a.image}}" data-holder-rendered="true">
+					        <a href="/books/{{current_borrow_book.id}}" class="thumbnail">
+		      				</div>
+					          <img data-src="holder.js/100%x180" alt="100%x180" style="height: 158px; width: 108px; display: block;" src="{{current_borrow_book.image}}" data-holder-rendered="true">
 					        </a>
 					    </td>
 				    	<td class="book-info">
 				    		<small>
-								<p>作者：{{a.author[:12]}}</p>
-								<p>书名：{{a.title[:10]}}</p>
-								<p>出版社：{{a.publisher[:7]}}</p>
-								<p>价格：{{a.price}}</p>
-								<p>共享人：{{a.owner_name}}</p>
-								<p>当前持有人：{{a.borrow_name}}</p>
+								<p>书名：{{current_borrow_book.title[:10]}}</p>
+								<p>作者：{{current_borrow_book.author[:12]}}</p>
+								<p>出版社：{{current_borrow_book.publisher[:7]}}</p>
+								<p>价格：{{current_borrow_book.price}}</p>
+								<p>共享人：{{current_borrow_book.owner_name}}</p>
+								<p>当前持有人：{{current_borrow_book.borrow_name}}</p>
 							</small>
+						</td>
+						<td valign="bottom">
+						{% if current_user.is_authenticated %}
+				    		<a class="btn btn-primary btn-block" onClick="reback({{current_borrow_book.id}})"><span class="glyphicon glyphicon-book"></span> 我要还这本书</a>
+			    		{% endif %}
 						</td>
 		    		</tr>
 		        </table>
-		      </div>
-		      {% endfor %}
 		    </div>
+    		{% endif %}
+			{% if not current_borrow_book %}
+			你当前没有借阅任何图书。
+    		{% endif %}
+
+
+
 
 			<div class="page-header"><h3>我分享的图书</h3></div>
 		    <div class="row">
@@ -44,8 +62,8 @@
 					    </td>
 				    	<td class="book-info">
 				    		<small>
-								<p>作者：{{a.author[:12]}}</p>
 								<p>书名：{{a.title[:10]}}</p>
+								<p>作者：{{a.author[:12]}}</p>
 								<p>出版社：{{a.publisher[:7]}}</p>
 								<p>价格：{{a.price}}</p>
 								<p>共享人：{{a.owner_name}}</p>
@@ -66,14 +84,24 @@
 			{% for a in borrow_log_list %}
      		<div class="well">
 	    		<small>
-					<p>书名：{{a.book_name}}</p>
-					<p>借阅人：{{a.account_name}}</p>
+					<h6 class="text-success">书名：{{a.book_name}}</h6>
 					<p>借阅时间：{{a.create_time}}</p>
-					<p>归还时间：{{a.real_reback_time}}</p>
+					<p>约定归还时间：{{a.reback_time}}</p>
+					<p>实际归还时间：{{a.real_reback_time}}</p>
 				</small>
 			</div>
       		{% endfor %}
 		</div>
 	</div>
 </div>
+{% endblock %}
+
+{% block js %}
+<script type="text/javascript">
+	function reback(book_id){
+		if(confirm("确定要归还此书？")){
+			location.href="/books/reback/"+book_id;
+		}
+	}
+</script>
 {% endblock %}
