--- a/apollo/templates/share.html
+++ b/apollo/templates/share.html
@@ -7,7 +7,7 @@
 <div class="container">
 
 	<div class="row">
-		<div class="page-header"> <h3>我要共享图书 !!!</h3></div>
+		<div class="page-header"> <h3>我要共享图书 ~</h3></div>
 		
 		<form class="form-horizontal" id = "step1" action="javascript:preview()">
 		  <div class="alert alert-info">
