--- a/apollo/static/styles.css
+++ b/apollo/static/styles.css
@@ -1,3 +1,6 @@
+.page-header{
+	margin-top:0px;
+}
 .navbar{
 	margin-bottom: 0px;
 }
@@ -11,3 +14,15 @@
 .book-info p{
 	margin: 5px;
 }
+.label-box .label{
+	margin-right:10px;
+	padding:5px 12px 5px 12px;
+	background-color: #ccc;
+	border-radius:16px;
+}
+
+.label-box .label a{
+	color:#666;
+}
+
+.my_tag{margin-top:2px;margin-bottom: 2px;}
