--- a/apollo/templates/about.html
+++ b/apollo/templates/about.html
@@ -15,6 +15,10 @@
     <ul><li>借书时，请首先和分享人确定</li></ul>
     <ul><li>还书时，也要和分享人确认后再点击还书</li></ul>
     <ul><li>希望你是爱读书之人，但是更重要的是希望你也是爱书之人</li></ul>
+    <br/>
+    <h4>特别鸣谢</h4>
+    <ul><li>感谢豆瓣提供图书api</li></ul>
+    <ul><li>感谢美团的创意</li></ul>
   </div>
 </div>
 {% endblock %}
