--- a/apollo/templates/base.html
+++ b/apollo/templates/base.html
@@ -62,8 +62,13 @@
 
 	</div>
 
-	
+    <div class="content">
 	{% block content %}{% endblock %}
+	</div>
+
+	<div ID="right-box" class="well text-center">
+		© 2016 北京千丁互联科技有限公司 All rights reserved. <a target="_blank" href="https://github.com/lepfinder/apollo">github</a>
+	</div>
 
 	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 	<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
