--- a/apollo/templates/share.html
+++ b/apollo/templates/share.html
@@ -20,7 +20,7 @@
 			  <div class="form-group">
 			    <label for="inputEmail3" class="col-sm-2 control-label">ISBN：</label>
 			    <div class="col-sm-6">
-			      <input type="input" class="form-control" name="isbn" id="isbn" placeholder="请输入图书背面的isbn编号后，点击查询" value="9787308146043">
+			      <input type="input" class="form-control" name="isbn" id="isbn" placeholder="请输入图书背面的isbn编号后，点击查询" value="">
 			    </div>
 			  </div>
 			  
