修改部分文案

--- a/apollo/templates/about.html
+++ b/apollo/templates/about.html
@@ -18,7 +18,7 @@
     <br/>
     <h4>特别鸣谢</h4>
     <ul><li>感谢豆瓣提供图书api</li></ul>
-    <ul><li>感谢美团的创意</li></ul>
+    <ul><li>部分创意来源于美团图书馆</li></ul>
   </div>
 </div>
 {% endblock %}
