--- a/apollo/templates/base.html
+++ b/apollo/templates/base.html
@@ -14,7 +14,7 @@
 	  <div class="container">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="/books/">書香館</a>
+	      <a class="navbar-brand" href="/books/">千丁-書館</a>
 	    </div>
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
@@ -67,7 +67,7 @@
 	</div>
 
 	<div ID="right-box" class="well text-center">
-		© 2016 北京千丁互联科技有限公司 All rights reserved. <a target="_blank" href="https://github.com/lepfinder/apollo">github</a>
+		© 2016 北京千丁互联科技有限公司 All rights reserved. powered by <a target="_blank" href="https://github.com/lepfinder/apollo">xiexiyang</a>
 	</div>
 
 	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
