--- a/apollo/templates/my_books.html
+++ b/apollo/templates/my_books.html
@@ -34,7 +34,7 @@
 							</small>
 						</td>
 						<td valign="bottom">
-						{% if current_user.is_authenticated %}
+						{% if current_user.is_authenticated and current_borrow_book.status==1 %}
 				    		<a class="btn btn-primary btn-block" onClick="reback({{current_borrow_book.id}})"><span class="glyphicon glyphicon-book"></span> 我要还这本书</a>
 			    		{% endif %}
 						</td>
