bigfix:syslog 分页失效问题修复

--- a/apollo/templates/syslog.html
+++ b/apollo/templates/syslog.html
@@ -65,7 +65,7 @@
 <script type="text/javascript">
 	function go_page(page){
 		$("#page_index").val(page);
-		location.href = "/accounts/syslog/"+page;
+		location.href = "/books/syslog/"+page;
 	}
 </script>
 
