分享图书和借阅图书时添加图书所在城市属性

--- a/apollo/templates/about.html
+++ b/apollo/templates/about.html
@@ -11,6 +11,7 @@
     <br/>
     <h4>关于借书的几点说明</h4>
     <ul><li>一个人同一时间只允许借阅一本图书</li></ul>
+    <ul><li>由于涉及到多个办公区,所以你要借阅的图书可能不在你当前的城市,请在借书时确认</li></ul>
     <ul><li>好借好还，再借不难，一本书默认借阅时间为两周，请尽量按时归还</li></ul>
     <ul><li>借书时，请首先和分享人确定</li></ul>
     <ul><li>还书时，也要和分享人确认后再点击还书</li></ul>
