--- a/apollo/templates/index.html
+++ b/apollo/templates/index.html
@@ -37,8 +37,11 @@
 						<p>书名：{{a.title[:10]}}</p>
 						<p>豆瓣评分：{{a.rating}}</p>
 						<p>作者：{{a.author[:12]}}</p>
-						<p>出版社：{{a.publisher[:7]}}</p>
+						<!--
+                        <p>出版社：{{a.publisher[:7]}}</p>
+                        -->
 						<p>共享人：{{a.owner_name}}</p>
+						<p>所在城市：{{a.city}}</p>
 						<p>当前持有人：{{a.borrow_name}}</p>
 					</small>
 				</td>
