--- a/apollo/templates/share.html
+++ b/apollo/templates/share.html
@@ -20,7 +20,7 @@
 			  <div class="form-group">
 			    <label for="inputEmail3" class="col-sm-2 control-label">ISBN：</label>
 			    <div class="col-sm-6">
-			      <input type="input" class="form-control" name="isbn" id="isbn" placeholder="请输入图书背面的isbn编号后，点击查询" value="">
+			      <input type="input" class="form-control" name="isbn" id="isbn" placeholder="请输入图书背面的isbn编号后，点击查询" value="9787111525820">
 			    </div>
 			  </div>
 			  
@@ -49,7 +49,25 @@
 
 			<div class="row" style="margin-top:20px;">
 				<div class="form-group" >
-			      <label for="login_name" class="col-sm-2 control-label">
+			      <label for="city" class="col-sm-2 control-label">
+			      	<span class="pull-right">选择所在城市：</span><span class="text-danger">* </span></label>
+			      <div class="col-sm-2">
+			      	<select id="city" class="form-control">
+			      		<option value="北京">北京</option>
+			      		<option value="重庆">重庆</option>
+			      		<option value="成都">成都</option>
+			      		<option value="上海">上海</option>
+			      		<option value="西安">西安</option>
+			      		<option value="深圳">深圳</option>
+			      	</select>
+			      </div>
+			    </div>
+				
+			</div>
+		  
+		    <div class="row" style="margin-top:20px;">
+				<div class="form-group" >
+			      <label for="recommend" class="col-sm-2 control-label">
 			      	<span class="pull-right">推荐语：</span></label>
 			      <div class="col-sm-6">
 			        <textarea id="recommend" name="recommend" cols="90" rows="6"></textarea>
@@ -57,7 +75,8 @@
 			    </div>
 				
 			</div>
-		  
+
+
 			<div class="row">
 			    <div class=" col-sm-4">
 			      <p style="margin-top: 15px;">
@@ -85,6 +104,12 @@
 <script type="text/javascript">
 	$(function(){
 		$("#step2").hide();
+
+        console.log("{{ current_user.city }}");
+        if("{{ current_user.city }}" != 'None'){
+            $("#city").val("{{ current_user.city }}")
+        }
+
 	})
 
 	function preview(){
@@ -121,6 +146,7 @@
 		$("#ok").html("正在处理中，请稍等")
 		$.post("/books/share/",{
 			isbn : $("#isbn").val(),
+			city : $("#city").val(),
 			recommend : $("#recommend").val()
 		},function(data){
 			if(data.code == 200){
