添加城市标签
添加城市标签功能

--- a/apollo/templates/book_detail.html
+++ b/apollo/templates/book_detail.html
@@ -39,7 +39,7 @@
 							<p>出版社：{{book.publisher}}</p>
 							<p>价格：{{book.price}}</p>
 							<p>共享人：{{book.owner_name}}</p>
-							<p>所在城市：{{book.city}}</p>
+                            <p>所在城市：<span class="text-danger" style="font-size: 1.2em">{{book.city}}</span></p>
 							<p>当前持有人：{{book.borrow_name}}</p>
 							<p>借阅次数：{{book.borrow_counts}}</p>
 						</small>
