--- a/apollo/templates/city_books.html
+++ b/apollo/templates/city_books.html
@@ -13,24 +13,23 @@
 
 <div class="container">
 	<div class="row label-box" >
-		<span>&nbsp;&nbsp;<strong>热门标签：</strong></span>
-		{% for tag in tag_list %}
-		<span class="label label-default">
-			<a href="{{url_for('books.tag_books',tag_id=tag.id)}}">{{tag.name}}</a>
-		</span>
-      	{% endfor %}
-      	<a href="{{url_for('books.tags')}}"><small>更多</small></a>
-	</div><br/>
-    <div class="row label-box" >
 		<span>&nbsp;&nbsp;<strong>城市标签：</strong></span>
 		{% for item in city_list %}
 		<span class="label label-default">
 			<a href="{{ url_for('books.city_books',city=item.city) }}">{{item.city}}</a>
 		</span>
       	{% endfor %}
-		<p style="margin-top: 10px;" class="text-muted">&nbsp;&nbsp;<small>书香馆共有 {{page_obj.total}} 本书</small></p>
+	</div>
+	<div class="row">
+		<p style="margin-top: 10px;" class="text-muted">&nbsp;&nbsp;<small><span class="text-success">"{{city}}"</span>下共有 {{ page_obj.total }} 本书</small></p>
 	</div>
     <div class="row">
+        <form class="navbar-form" id="page_form" method="post" action="{{ url_for('books.city_books',city=city) }}">
+        <div class="form-group">
+          <input type="hidden" name="page" id="page_form_index"/>
+        </div>
+      </form>
+
       {% for a in page_obj.items %}
       <div class="col-xs-6 col-md-4 col-lg-3">
       	<table>
@@ -45,11 +44,8 @@
 						<p>书名：{{a.title[:10]}}</p>
 						<p>豆瓣评分：{{a.rating}}</p>
 						<p>作者：{{a.author[:12]}}</p>
-						<!--
-                        <p>出版社：{{a.publisher[:7]}}</p>
-                        -->
+						<p>出版社：{{a.publisher[:7]}}</p>
 						<p>共享人：{{a.owner_name}}</p>
-						<p>所在城市：<span class="text-danger" style="font-size: 1.2em">{{a.city}}</span></p>
 						<p>当前持有人：{{a.borrow_name}}</p>
 					</small>
 				</td>
@@ -57,8 +53,8 @@
         </table>
       </div>
       {% endfor %}
-      
     </div>
+
     <div class="row">
     	<nav class="pull-right">
 
@@ -93,11 +89,9 @@
 <script type="text/javascript">
 
 	function go_page(page){
-		$("#page_index").val(page);
-		$("#book_search").submit();
+		$("#page_form_index").val(page);
+		$("#page_form").submit();
 	}
-
-	
 </script>
 
 {% endblock %}
