--- a/apollo/templates/book_detail.html
+++ b/apollo/templates/book_detail.html
@@ -142,6 +142,8 @@
                if(confirm("你当前的城市是" + current_user_city +",你所借的图书所在城市是:"+book_city + ",你确定要继续借此书么吗?")){
                    location.href="/books/borrow/"+book_id;
                }
+            }else{
+                location.href="/books/borrow/"+book_id;
             }
         }else{
             location.href="/books/borrow/"+book_id;
